force-app/main/default/objects/R360_Daily_Capacity__c/R360_Daily_Capacity__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Compact current-day aggregate capacity ledger. One row per governed resource is refreshed transactionally; immutable allocation/audit history preserves prior decisions without exhausting Developer Edition storage.</description><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><externalSharingModel>Private</externalSharingModel><label>Daily Capacity Ledger</label><nameField><displayFormat>CAP-{00000}</displayFormat><label>Capacity Ledger Number</label><type>AutoNumber</type></nameField><pluralLabel>Daily Capacity Ledger</pluralLabel><sharingModel>Private</sharingModel><visibility>Public</visibility></CustomObject>