force-app/main/default/objects/R360_Daily_Capacity__c/fields/Allocated_Hours__c.field-meta.xml
<CustomField><fullName>Allocated_Hours__c</fullName><defaultValue>0</defaultValue><label>Allocated Hours</label><precision>5</precision><required>true</required><scale>2</scale><trackHistory>true</trackHistory><type>Number</type></CustomField>