force-app/main/default/objects/R360_Daily_Capacity__c/fields/Allocation_Count__c.field-meta.xml
<CustomField><fullName>Allocation_Count__c</fullName><defaultValue>0</defaultValue><label>Allocation Count</label><precision>4</precision><required>true</required><scale>0</scale><trackHistory>true</trackHistory><type>Number</type></CustomField>