force-app/main/default/objects/R360_Daily_Capacity__c/fields/Approved_Overallocated__c.field-meta.xml
<CustomField><fullName>Approved_Overallocated__c</fullName><defaultValue>false</defaultValue><label>Approved Overallocated</label><trackHistory>true</trackHistory><type>Checkbox</type></CustomField>