force-app/main/default/objects/R360_Daily_Capacity__c/fields/Ledger_Key__c.field-meta.xml
<CustomField><fullName>Ledger_Key__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Ledger Key</label><length>80</length><required>true</required><type>Text</type><unique>true</unique></CustomField>