force-app/main/default/objects/R360_Daily_Capacity__c/fields/Overage_Hours__c.field-meta.xml
<CustomField><fullName>Overage_Hours__c</fullName><formula>MAX(0, Allocated_Hours__c - Standard_Hours__c)</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Overage Hours</label><precision>5</precision><scale>2</scale><type>Number</type></CustomField>