force-app/main/default/objects/R360_Daily_Capacity__c/fields/Pending_Approval_Count__c.field-meta.xml
<CustomField><fullName>Pending_Approval_Count__c</fullName><defaultValue>0</defaultValue><label>Pending Approval Count</label><precision>4</precision><required>true</required><scale>0</scale><trackHistory>true</trackHistory><type>Number</type></CustomField>