force-app/main/default/objects/R360_Daily_Capacity__c/fields/Reconciled_At__c.field-meta.xml
<CustomField><fullName>Reconciled_At__c</fullName><label>Reconciled At</label><required>true</required><trackHistory>true</trackHistory><type>DateTime</type></CustomField>