force-app/main/default/objects/R360_Daily_Capacity__c/fields/Remaining_Hours__c.field-meta.xml
<CustomField><fullName>Remaining_Hours__c</fullName><formula>Standard_Hours__c - Allocated_Hours__c</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Remaining Hours</label><precision>5</precision><scale>2</scale><type>Number</type></CustomField>