force-app/main/default/objects/R360_Daily_Capacity__c/fields/Resource__c.field-meta.xml
<CustomField><fullName>Resource__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Resource</label><referenceTo>Resource__c</referenceTo><relationshipLabel>Daily Capacity Ledger</relationshipLabel><relationshipName>Daily_Capacity_Ledger</relationshipName><required>true</required><trackHistory>true</trackHistory><type>Lookup</type></CustomField>