force-app/main/default/objects/R360_Daily_Capacity__c/fields/Standard_Hours__c.field-meta.xml
<CustomField><fullName>Standard_Hours__c</fullName><defaultValue>8</defaultValue><label>Standard Hours</label><precision>5</precision><required>true</required><scale>2</scale><trackHistory>true</trackHistory><type>Number</type></CustomField>