force-app/main/default/objects/R360_Daily_Capacity__c/fields/Utilization_Percent__c.field-meta.xml
<CustomField><fullName>Utilization_Percent__c</fullName><formula>IF(Standard_Hours__c = 0, 0, Allocated_Hours__c / Standard_Hours__c)</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Utilization</label><precision>18</precision><scale>2</scale><type>Percent</type></CustomField>