force-app/main/default/objects/R360_Daily_Capacity__c/fields/Work_Date__c.field-meta.xml
<CustomField><fullName>Work_Date__c</fullName><label>Work Date</label><required>true</required><trackHistory>true</trackHistory><type>Date</type></CustomField>