force-app/main/default/objects/R360_Daily_Capacity__c/listViews/Current_Capacity_Status.listView-meta.xml
<ListView><fullName>Current_Capacity_Status</fullName><columns>NAME</columns><columns>Resource__c</columns><columns>Work_Date__c</columns><columns>Allocated_Hours__c</columns><columns>Utilization_Percent__c</columns><columns>Capacity_Status__c</columns><columns>Approved_Overallocated__c</columns><filterScope>Everything</filterScope><label>Current Capacity Status</label></ListView>